fix: bundle server for standalone Windows app
- Server is now bundled into single file (server-bundle.cjs)
- No longer requires Node.js to be installed on user's machine
- Fixed knowledge base path resolution for bundled environment
- Updated build process to include esbuild bundling step

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "build": "pnpm -r build",
     "build:server": "pnpm --filter @reaper-assistant/server build",
     "build:web": "pnpm --filter @reaper-assistant/web build",
-    "build:desktop": "pnpm build:server && pnpm build:web && pnpm --filter reapermadness build",
-    "build:desktop:win": "pnpm build:server && pnpm build:web && pnpm --filter reapermadness build:win",
+    "build:desktop": "pnpm build:server && pnpm bundle:server && pnpm build:web && pnpm --filter reapermadness build",
+    "build:desktop:win": "pnpm build:server && pnpm bundle:server && pnpm build:web && pnpm --filter reapermadness build:win",
+    "bundle:server": "cd packages/server && npx esbuild src/index.ts --bundle --platform=node --target=node18 --format=cjs --outfile=dist/server-bundle.cjs",
     "start": "pnpm --filter @reaper-assistant/server start",
     "start:mcp": "node packages/server/dist/index.js --mcp",
     "desktop": "pnpm --filter reapermadness start",
