--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,6 +7,8 @@
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "build": "tsc",
+    "bundle": "esbuild src/index.ts --bundle --platform=node --target=node18 --format=esm --outfile=dist/bundle.mjs --external:@modelcontextprotocol/sdk",
+    "build:desktop": "tsc && esbuild dist/index.js --bundle --platform=node --target=node18 --format=cjs --outfile=dist/server-bundle.cjs --packages=bundle",
     "start": "node dist/index.js",
     "start:mcp": "node dist/index.js --mcp",
     "clean": "rm -rf dist"
@@ -22,6 +24,7 @@
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.0",
+    "esbuild": "^0.20.0",
     "tsx": "^4.6.0",
     "typescript": "^5.3.0"
   }
