--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -17,7 +17,8 @@
     "build:linux": "electron-builder --linux"
   },
   "dependencies": {
-    "electron-is-dev": "^2.0.0"
+    "electron-is-dev": "^2.0.0",
+    "electron-updater": "^6.6.2"
   },
   "devDependencies": {
     "electron": "^28.0.0",
@@ -26,6 +27,11 @@
   "build": {
     "appId": "com.reapermadness.app",
     "productName": "Reaper Madness",
+    "publish": {
+      "provider": "github",
+      "owner": "brebuilds",
+      "repo": "reapermadness"
+    },
     "directories": {
       "output": "dist",
       "buildResources": "assets"
@@ -44,30 +50,40 @@
       {
         "from": "../server/src/knowledge",
         "to": "server/knowledge",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       },
       {
         "from": "../web/dist",
         "to": "web",
-        "filter": ["**/*"]
+        "filter": [
+          "**/*"
+        ]
       }
     ],
     "win": {
       "target": [
         {
           "target": "nsis",
-          "arch": ["x64"]
+          "arch": [
+            "x64"
+          ]
         }
       ],
       "icon": "assets/icon.ico"
     },
     "mac": {
-      "target": ["dmg"],
+      "target": [
+        "dmg"
+      ],
       "icon": "assets/icon.icns",
       "category": "public.app-category.music"
     },
     "linux": {
-      "target": ["AppImage"],
+      "target": [
+        "AppImage"
+      ],
       "icon": "assets/icon.png",
       "category": "Audio"
     },
