--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -17,6 +17,7 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lru-cache": "^11.2.4",
     "osc": "^2.4.4",
     "zod": "^3.22.0"
   },
