Fix Windows/Mac install issues: improve Node.js detection, path resolution, and error handling

--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -38,14 +38,15 @@
     },
     "files": [
       "main.js",
-      "preload.js",
-      "server/**/*",
-      "web/**/*"
+      "preload.js"
     ],
     "extraResources": [
       {
         "from": "../server/dist/server-bundle.cjs",
-        "to": "server/server-bundle.cjs"
+        "to": "server/server-bundle.cjs",
+        "filter": [
+          "**/*"
+        ]
       },
       {
         "from": "../server/src/knowledge",
