fix: add missing bundle:server step to Windows build workflow

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -29,6 +29,9 @@ jobs:
       - name: Build server
         run: pnpm build:server
 
+      - name: Bundle server
+        run: pnpm bundle:server
+
       - name: Build web
         run: pnpm build:web
 
