--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -45,9 +45,10 @@ jobs:
           if (Test-Path "packages\web\dist\index.html") { Write-Host "✓ web/index.html exists" } else { Write-Host "✗ web/index.html missing"; exit 1 }
 
       - name: Build Windows installer
-        run: pnpm --filter reapermadness build:win -- --publish never
+        run: pnpm --filter reapermadness exec electron-builder --win --publish never
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          CSC_IDENTITY_AUTO_DISCOVERY: false
 
       - name: Upload Windows installer
         uses: softprops/action-gh-release@v1
