--- a/packages/desktop/package.json
+++ b/packages/desktop/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "start": "electron .",
     "build": "electron-builder",
-    "build:win": "electron-builder --win",
+    "build:win": "electron-builder --win --publish never",
     "build:mac": "electron-builder --mac",
     "build:linux": "electron-builder --linux"
   },
